[package]
name = "kleos-fs"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "AST-aware filesystem CLIs for AI agents -- kr (read), kw (write), ke (edit)"

[[bin]]
name = "kr"
path = "src/main.rs"

[[bin]]
name = "kw"
path = "src/main.rs"

[[bin]]
name = "ke"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
# Spelled out (not inheriting from workspace) so default-features=false takes
# effect: kleos-fs is a small CLI binary; we only need the blocking+rustls-tls
# stack, not the workspace default native-tls.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
