[package]
name = "kleos-ingest"
version = "1.8.0"
edition = "2021"
publish = false
license = "MIT"

[[bin]]
name = "kleos-ingest"
path = "src/main.rs"

[dependencies]
notify = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
kleos-lib = { path = "../kleos-lib", version = "1.2.1", features = ["piv"] }
