[package]
name = "kleos-install-core"
version = "1.7.3"
edition = "2021"
rust-version.workspace = true
description = "Shared core logic for the Kleos interactive installer"
license = "Elastic-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
thiserror = { workspace = true }
hex = { workspace = true }
semver = "1"
