[package]
name = "kleos-install-core"
version = "1.8.0"
edition = "2021"
rust-version.workspace = true
description = "Shared core logic for the Kleos interactive installer"
license = "Elastic-2.0"

[dependencies]
kleos-config = { path = "../kleos-config", version = "1.8.0" }
serde = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
