[package]
name = "kleos-install-gui"
version = "1.5.0"
edition = "2021"
rust-version.workspace = true
description = "Native GUI installer for Kleos"
license = "Elastic-2.0"

[[bin]]
name = "kleos-install-gui"
path = "src/main.rs"

[dependencies]
kleos-install-core = { path = "../kleos-install-core", version = "1.2.1" }
eframe = "0.31"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = "0.15"
