[package]
name = "kleos-install"
version = "1.6.1"
edition = "2021"
rust-version.workspace = true
description = "Interactive TUI installer for Kleos"
license = "Elastic-2.0"

[[bin]]
name = "kleos-install"
path = "src/main.rs"

[dependencies]
kleos-install-core = { path = "../kleos-install-core", version = "1.2.1" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.30"
crossterm = "0.28"
anyhow = "1"
rand = { workspace = true }
tokio = { workspace = true }
