[package]
name = "kleos-install"
version = "1.9.0"
edition = "2021"
rust-version.workspace = true
description = "Interactive TUI installer for Kleos"
license = "Elastic-2.0"

[[bin]]
name = "kleos-install"
path = "src/main.rs"

[dependencies]
kleos-install-core = { path = "../kleos-install-core", version = "1.9.0" }
kleos-config = { path = "../kleos-config", version = "1.9.0" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.30"
crossterm = "0.28"
anyhow = "1"
tokio = { workspace = true }
