[package]
name = "kleos-lib"
version = "1.9.0"
edition = "2021"
rust-version.workspace = true
description = "Core library for Kleos -- persistent semantic memory and cognitive infrastructure for AI agents"
license = "Elastic-2.0"
repository = "https://github.com/Ghost-Frame/Kleos"
homepage = "https://kleos.syntheos.dev"
readme = "../README.md"

[lib]
name = "kleos_lib"

[features]
default = ["brain_hopfield", "ml"]
brain_hopfield = ["dep:ndarray"]
# Local ML inference stack: ONNX embedder + cross-encoder reranker
# (ort/tokenizers) and the LanceDB ANN index (lancedb/arrow). Default-on;
# disabling it builds a lean crate that degrades to remote/HTTP embedding
# providers, the HTTP reranker backend, and FTS + sqlite-vec retrieval.
ml = ["dep:ort", "dep:tokenizers", "dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]
test-utils = []
# Enable per-tenant sharding (rusqlite-based). Mutually exclusive with libsql tests.
tenant-sharding = []
credd-raw = []
piv = ["yubikey"]
# Vendor SQLCipher for at-rest encryption. Mutually exclusive with libsql
# in the same binary (symbol collision), so engram-migrate must NOT enable this.
sqlcipher = ["rusqlite/bundled-sqlcipher"]
# SQLCipher with vendored OpenSSL for cross-compilation targets.
sqlcipher-vendored = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
# Bundle SQLite from source (needed on Windows where no system sqlite3.lib exists).
# Mutually exclusive with libsql in the same binary (symbol collision).
bundled-sqlite = ["rusqlite/bundled"]
# Vendor OpenSSL from source for cross-compilation targets.
vendored-openssl = ["openssl/vendored"]

[dependencies]
kleos-config = { path = "../kleos-config", version = "1.9.0" }
rusqlite = { workspace = true }
tokio-rusqlite = { workspace = true }
deadpool-sqlite = { workspace = true, features = ["tracing"] }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
unicode-normalization = { workspace = true }
rust-stemmers = { workspace = true }
whatlang = { workspace = true }
url = { workspace = true }
ipnet = { workspace = true }
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
reqwest = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
zip = { workspace = true }
pdf-extract = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
futures = { workspace = true }
lru = { workspace = true }
arc-swap = { workspace = true }
walkdir = { workspace = true }
lancedb = { workspace = true, optional = true }
flate2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
secrecy = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
toml = { workspace = true }
metrics = { workspace = true }
rust_decimal = { workspace = true }

# Crypto: ECDH bootstrap + Sparkling Fairy PIV-Everywhere auth.
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "pem"] }
ed25519-dalek = { workspace = true }
hkdf = "0.12"
aes-gcm = "0.10"
yubikey = { version = "0.8", optional = true }
openssl = { version = "0.10", optional = true }

# Vendored protoc binary -- only available for Linux x86_64.
# Other platforms install protoc via system package manager.
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
protoc-bin-vendored-linux-x86_64 = { workspace = true }

[dev-dependencies]
# test-util enables tokio::test(start_paused) so timer-race tests (e.g. the
# circuit-breaker cancelled-probe tests) resolve virtually with no real sleeps.
tokio = { workspace = true, features = ["test-util"] }
axum = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
serial_test = "3"
serde_json = { workspace = true }

# Criterion bench targets. Each must set harness = false so criterion
# supplies its own main(). Keep these zero-cloud: ONNX embeddings run
# against the locally cached model, DB benches use tempfile SQLite.

[[bench]]
name = "embeddings"
harness = false
required-features = ["test-utils", "ml"]

# Dev targets that construct the concrete ONNX types directly; skipped (not
# broken) when the ml feature is off.
[[example]]
name = "onnx_probe"
required-features = ["ml"]

[[test]]
name = "lang_retrieval"
required-features = ["ml"]

[[bench]]
name = "memory_search"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "graph_traversal"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "pitr_collect"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "auth_middleware"
harness = false
required-features = ["test-utils"]
