[package]
name = "kleos-mcp"
version = "1.8.0"
edition = "2021"
rust-version.workspace = true
description = "MCP server for Kleos -- Model Context Protocol integration for LLM tools"
license = "Elastic-2.0"
repository = "https://github.com/Ghost-Frame/Kleos"
homepage = "https://kleos.syntheos.dev"
readme = "../README.md"

[[bin]]
name = "kleos-mcp"
path = "src/main.rs"

[lib]
name = "kleos_mcp"

[features]
default = ["piv"]
piv = ["kleos-lib/piv", "kleos-client/piv"]
http = ["dep:axum", "dep:tower-http"]

[dependencies]
kleos-lib = { path = "../kleos-lib", version = "1.8.0", default-features = false }
kleos-client = { path = "../kleos-client", version = "1.8.0", default-features = false }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hostname = "0.4"

[dev-dependencies]
tokio = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/kleos-mcp-{ target }{ archive-suffix }"
bin-dir = "kleos-mcp{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/kleos-mcp-linux-x64"
[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/kleos-mcp-linux-arm64"
[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/kleos-mcp-darwin-x64"
[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/kleos-mcp-darwin-arm64"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/kleos-mcp-windows-x64.exe"
