[package]
name = "kleos-migrate"
version = "0.3.2"
edition = "2021"
rust-version.workspace = true
description = "ETL tool to copy an encrypted SQLCipher monolith into a per-tenant shard"
license = "Elastic-2.0"

[[bin]]
name = "kleos-migrate"
path = "src/main.rs"

[dependencies]
kleos-lib = { path = "../kleos-lib", version = "0.3.2", features = ["sqlcipher", "tenant-sharding"] }
rusqlite = { workspace = true, features = ["bundled-sqlcipher"] }
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow = "57"
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
