[package]
name = "kleos-phylax-ssh-agentd"
version = "1.7.0"
edition = "2021"
rust-version.workspace = true
description = "Headless SSH agent daemon that brokers keys and signing through phylaxd"
license = "Elastic-2.0"

[[bin]]
name = "phylax-ssh-agentd"
path = "src/main.rs"

[dependencies]
kleos-phylax-ssh-agent = { path = "../kleos-phylax-ssh-agent", version = "1.7.0" }
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "p256", "p384", "p521", "crypto"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
hex = { workspace = true }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
